Fix testing framework for non-modular code
- Added global window.X exports to all class files
- Updated tests to properly access global objects
- Fixed specific test issues with mocking
- Made all 51 tests pass successfully

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,8 @@
     "Renderer": "readable",
     "Controls": "readable",
     "GameStorage": "readable",
-    "Game": "readable"
+    "Game": "readable",
+    "GameUtils": "readable",
+    "Pathfinding": "readable"
   }
 }
